src/examples/should_fail/undefined_child_nonterminal.kiki
start Foo

struct Foo(Bar)

terminal Token {
    $Ident: String
}
